--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,9 @@ jobs:
       script:
         - docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
         - export R="jobtechswe/mydata"
-        - docker build -t $R-app app/
-        - docker build -t $R-cv examples/cv/
-        - docker build -t $R-operator operator/
+        - sh -c "cd app && docker build --pull -t $R-app ."
+        - sh -c "cd examples/cv && docker build --pull -t $R-cv ."
+        - sh -c "cd operator && docker build --pull -t $R-operator ."
         - docker push $R-app
         - docker push $R-cv
         - docker push $R-operator
