Working on the build steps

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 env:
-  - DOCKER_COMPOSE_VERSION=1.23.2
-  - IMAGE_TAG=latest
+  global:
+    - DOCKER_COMPOSE_VERSION=1.23.2
+    - IMAGE_TAG=latest
 
 jobs:
   include:
