Working on the build steps

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ jobs:
         - docker
       script:
         - docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
-        - if [ -z "$TRAVIS_TAG" ]; IMAGE_TAG=$TRAVIS_TAG; fi
+        - if [ -z "$TRAVIS_TAG" ]; export IMAGE_TAG=$TRAVIS_TAG; fi
         - echo ${IMAGE_TAG}
         - docker build --pull -t jobtechswe/mydata-app:${IMAGE_TAG} app/
         - docker build --pull -t jobtechswe/mydata-cv:${IMAGE_TAG} examples/cv/
