--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,6 @@ jobs:
       script:
         - docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
         - if [ ! -z "$TRAVIS_TAG" ]; then export TAG="$TRAVIS_TAG"; else export TAG="latest"; fi
-        - echo ${TAG}
         - docker build --pull -t jobtechswe/mydata-app:${TAG} app/
         - docker build --pull -t jobtechswe/mydata-cv:${TAG} examples/cv/
         - docker build --pull -t jobtechswe/mydata-operator:${TAG} operator/
@@ -49,9 +48,16 @@ jobs:
     # update openshift DeployConfig(s)
     - stage: deploy
       install:
-        - bash ./infrastructure/travis/install-openshift.sh
-        - export PATH=$PATH:/tmp/openshift
-      script: bash infrastructure/travis/deploy.sh
+        - set -o pipefail \
+          set -ex
+          mkdir -p /opt/openshift
+          wget -qO- https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz | tar xvzf - -C /opt/openshift --strip-components=1
+        - export PATH=$PATH:/opt/openshift
+      script:
+        - oc login $OPENSHIFT_URL --token=$OPENSHIFT_TOKEN --insecure-skip-tls-verify=true
+        - if [ ! -z "$TRAVIS_TAG" ]; then oc patch deploymentconfig cv-$PHASE -p '{"spec": {"template": {"spec": {"containers": {"image": "jobtechswe/mydata-cv:'$TRAVIS_TAG'"}}}}}'; fi
+        - if [ ! -z "$TRAVIS_TAG" ]; then oc patch deploymentconfig operator-$PHASE -p '{"spec": {"template": {"spec": {"containers": {"image": "jobtechswe/mydata-operator:'$TRAVIS_TAG'"}}}}}'; fi
+        - oc logout
 
 # Flow control
 stages:
