--- a/infrastructure/openshift/ci/operator-DeploymentConfig.yml
+++ b/infrastructure/openshift/ci/operator-DeploymentConfig.yml
@@ -53,7 +53,7 @@ spec:
               secretKeyRef:
                 name: apm
                 key: token
-          image: operator:latest
+          image: jobtechswe/mydata-operator:latest
           imagePullPolicy: Always
           name: operator-ci
           terminationMessagePath: /dev/termination-log
@@ -84,12 +84,3 @@ spec:
       terminationGracePeriodSeconds: 30
   triggers:
     - type: ConfigChange
-    - imageChangeParams:
-        automatic: true
-        containerNames:
-          - operator-ci
-        from:
-          kind: ImageStreamTag
-          name: 'operator:latest'
-      
-      type: ImageChange
