--- a/.travis.yml
+++ b/.travis.yml
@@ -38,12 +38,17 @@ jobs:
       script:
         - docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
         - if [ ! -z "$TRAVIS_TAG" ]; then export TAG="$TRAVIS_TAG"; else export TAG="latest"; fi
-        - docker build --pull -t jobtechswe/mydata-app:${TAG} app/
-        - docker build --pull -t jobtechswe/mydata-cv:${TAG} examples/cv/
-        - docker build --pull -t jobtechswe/mydata-operator:${TAG} operator/
+        # Build images
+        - docker build --pull -t jobtechswe/mydata-app:${TAG} --cache-from jobtechswe/mydata-app:${TAG} app/
+        - docker build --pull -t jobtechswe/mydata-cv:${TAG} --cache-from jobtechswe/mydata-cv:${TAG} examples/cv/
+        - docker build --pull -t jobtechswe/mydata-operator:${TAG} --cache-from jobtechswe/mydata-operator:${TAG} operator/
+
+        # Push images to Docker Hub
         - docker push jobtechswe/mydata-cv:${TAG}
         - docker push jobtechswe/mydata-app:${TAG}
         - docker push jobtechswe/mydata-operator:${TAG}
+
+        # If tag build, tag images as latest-tag
         - if [ ! -z "$TRAVIS_TAG" ]; then docker tag jobtechswe/mydata-cv:$TAG jobtechswe/mydata-cv:latest-tag && docker push jobtechswe/mydata-cv:latest-tag; fi
         - if [ ! -z "$TRAVIS_TAG" ]; then docker tag jobtechswe/mydata-app:$TAG jobtechswe/mydata-app:latest-tag && docker push jobtechswe/mydata-app:latest-tag; fi
         - if [ ! -z "$TRAVIS_TAG" ]; then docker tag jobtechswe/mydata-operator:$TAG jobtechswe/mydata-operator:latest-tag && docker push jobtechswe/mydata-operator:latest-tag; fi
@@ -52,10 +57,8 @@ jobs:
     # update openshift DeployConfig(s)
     - stage: deploy
       install:
-        - set -o pipefail \
-          set -ex \
-          mkdir -p /opt/openshift \
-          wget -qO- https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz | tar xvzf - -C /opt/openshift --strip-components=1
+        - mkdir -p /opt/openshift
+        - wget -qO- https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz | tar xvzf - -C /opt/openshift --strip-components=1
         - export PATH=$PATH:/opt/openshift
       script:
         - oc login $OPENSHIFT_URL --token=$OPENSHIFT_TOKEN --insecure-skip-tls-verify=true
@@ -73,6 +76,7 @@ stages:
     # if: branch != master OR type = pull_request
     if: 1 = 0
   - name: build
+    if: 1 = 0
     # if: (branch = master AND type != pull_request) OR tag IS present
   - name: deploy
     if: (branch = master AND type != pull_request) OR tag IS present
