Working on the build steps

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ jobs:
         - export PATH=$PATH:/opt/openshift
       script:
         - oc login $OPENSHIFT_URL --token=$OPENSHIFT_TOKEN --insecure-skip-tls-verify=true
-        - if [ ! -z "$TRAVIS_TAG" ]; then export PHASE=test; else PHASE=ci fi
+        - if [ ! -z "$TRAVIS_TAG" ]; then export PHASE=test; else PHASE=ci; fi
         - oc rollout latest ci-${PHASE} -n mydata
         - oc rollout latest operator-${PHASE} -n mydata
         - oc logout
