--- a/app/package.json
+++ b/app/package.json
@@ -65,10 +65,11 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
+    "express": "^4.16.4",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "^0.47.1",
-    "prettier": "^1.16.4",
     "nodemon": "^1.18.10",
+    "prettier": "^1.16.4",
     "react-dom": "^16.7.0",
     "react-native-dotenv": "^0.2.0",
     "react-native-svg-transformer": "^0.12.1",
