--- a/.travis.yml
+++ b/.travis.yml
@@ -97,9 +97,9 @@ jobs:
 # This section defines the order in which stages are run and when to run certain stages
 stages:
   - name: lint
-    if: branch != master OR type = pull_request
+    if: branch != master
   - name: end-2-end
-    if: branch != master OR type = pull_request
+    if: branch != master
   - name: build
     if: (branch = master AND type != pull_request) OR tag IS present
   - name: deploy
