Updated APP_NAME for operator in ci and test respectively

--- a/infrastructure/openshift/ci/operator-DeploymentConfig.yml
+++ b/infrastructure/openshift/ci/operator-DeploymentConfig.yml
@@ -45,7 +45,7 @@ spec:
           - name: REDIS
             value: 'redis://:fubar@redis-ci.mydata.svc:6379/'
           - name: APP_NAME
-            value: operator
+            value: operator_ci
           - name: APM_SERVER
             value: 'https://f7a3f8bb7ac7404eb669a8798e460701.apm.eu-west-1.aws.cloud.es.io'
           - name: APM_TOKEN
