--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ jobs:
     # code linter
     - stage: "lint"
       name: "Ensure code maintains the linting rules"
+      cache: npm
       language: node_js
       install:
         - npm run install-all
@@ -17,6 +18,7 @@ jobs:
     # end-to-end tests
     - stage: "end-2-end"
       name: "Run end-to-end tests"
+      cache: npm
       language: node_js
       services:
         # Require docker to be running in the build context
