--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "update-all": "npm i && npm --prefix ./app i ./app && npm --prefix ./client i ./client && npm --prefix ./examples/cv i ./examples/cv && npm --prefix ./operator i ./operator && npm --prefix ./e2e i ./e2e ",
     "audit-all": "npm audit && npm --prefix ./app audit && npm --prefix ./client audit && npm --prefix ./examples/cv audit && npm --prefix ./operator audit && npm --prefix ./e2e audit ",
     "audit-fix-all": "npm audit fix && npm --prefix ./app audit fix && npm --prefix ./client audit fix && npm --prefix ./examples/cv audit fix && npm --prefix ./operator audit fix && npm --prefix ./e2e audit fix",
-    "lint-all": "npm --prefix ./app run lint && npm --prefix ./client run lint && npm --prefix ./examples/cv run lint && npm --prefix ./operator run lint",
+    "lint-all": "npm --prefix ./app run lint && npm --prefix ./client run lint && npm --prefix ./examples/cv run lint && npm --prefix ./operator run lint && npm --prefix ./e2e run lint",
     "start-all": "docker-compose -f docker-compose.dev.yml down && docker-compose down && docker-compose up -d && docker-compose -f docker-compose.dev.yml up -d",
     "test-all": "npm run test-all:unit && npm run test-all:e2e",
     "test-all:e2e": "sh -c 'cd ./e2e && ./script.sh'",
