--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "audit-all": "npm audit && npm --prefix ./app audit && npm --prefix ./client audit && npm --prefix ./examples/cv audit && npm --prefix ./operator audit && npm --prefix ./e2e audit ",
     "audit-fix-all": "npm audit fix && npm --prefix ./app audit fix && npm --prefix ./client audit fix && npm --prefix ./examples/cv audit fix && npm --prefix ./operator audit fix && npm --prefix ./e2e audit fix",
     "lint-all": "npm --prefix ./app run lint && npm --prefix ./client run lint && npm --prefix ./examples/cv run lint && npm --prefix ./operator run lint && npm --prefix ./e2e run lint",
-    "start-all": "docker-compose -f docker-compose.dev.yml down && docker-compose down && docker-compose up -d && docker-compose -f docker-compose.dev.yml up -d",
+    "start-all": "docker-compose -f docker-compose.dev.yml down && docker-compose down && docker-compose up && docker-compose -f docker-compose.dev.yml up",
     "test-all": "npm run test-all:unit && npm run test-all:e2e",
     "test-all:e2e": "sh -c 'cd ./e2e && ./script.sh'",
     "test-all:unit": "npm --prefix ./app test ./app && npm --prefix ./client test ./client && npm --prefix ./examples/cv test ./examples/cv && npm --prefix ./operator test ./operator"
