chore: change license to apache2

--- a/operator/package.json
+++ b/operator/package.json
@@ -20,7 +20,7 @@
     "Johan Öbrink <johan.obrink@iteam.se>",
     "Alexander Czigler <alexander@iteam.se>"
   ],
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/JobtechSwe/mydata/issues"
   },
