--- a/examples/national-registration/package.json
+++ b/examples/national-registration/package.json
@@ -6,11 +6,14 @@
     "lint": "eslint '**/*.js'"
   },
   "dependencies": {
-    "@mydata/client": "^0.22.4",
+    "@mydata/client": "0.24.1",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "morgan": "^1.9.1",
     "qrcode": "^1.3.3",
+    "random-seed": "^0.3.0",
+    "uuid": "^3.3.2",
     "vash": "^0.12.6"
   },
   "devDependencies": {
