--- a/lerna.json
+++ b/lerna.json
@@ -6,5 +6,10 @@
     "examples/*",
     "operator"
   ],
-  "version": "0.4.5"
+  "version": "0.0.1",
+  "ignoreChanges": [
+    "**/__fixtures__/**",
+    "**/__tests__/**",
+    "**/*.md"
+  ]
 }
