--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,15 @@ jobs:
       name: "Lint and run end-to-end tests"
       cache: npm
       language: node_js
+      services:
+        # Require docker to be running in the build context
+        - docker
+      before_install:
+        # Install a fresh version of docker-compose
+        - sudo rm /usr/local/bin/docker-compose
+        - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+        - chmod +x docker-compose
+        - sudo mv docker-compose /usr/local/bin
       install:
         - npm i -g lerna
         - npm install file:client --prefix examples/cv
