--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
   "bugs": {
     "url": "https://github.com/JobtechSwe/mydata/issues"
   },
-  "homepage": "https://github.com/JobtechSwe/mydata#readme"
+  "homepage": "https://github.com/JobtechSwe/mydata#readme",
+  "version": "0.0.1"
 }
